<?xml version="1.0" encoding="utf-8"?>

<layout>

    <data>

        <variable
            name="wallet"
            type="com.example.androidkt.Wallet" />
    </data>

    <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="28dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="12dp"
        app:cardElevation="5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:background="@drawable/gradient_bg_first"
            app:card_skin="@{ wallet.cardSkin }"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="30dp"
                android:src="@drawable/img_logo_1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tv_wallet_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="34dp"
                android:text="@{wallet.cardName}"
                tools:text="@string/tv_wallet_type"
                android:textSize="17sp"
                android:textColor="#80FFFFFF"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_wallet_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/tv_wallet_balance"
                android:text="@{wallet.cardBalance + ``}"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/tv_wallet_name"
                app:layout_constraintTop_toBottomOf="@id/tv_wallet_name" />

            <TextView
                android:id="@+id/tv_wallet_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="34dp"
                tools:text="@string/tv_wallet_number"
                android:text="@{wallet.cardNumber}"
                android:textColor="@color/wallet_number_col"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/tv_wallet_number"
                app:layout_constraintTop_toBottomOf="@id/tv_wallet_number" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>